--- a/src/application/view/Display.fxml
+++ b/src/application/view/Display.fxml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.111">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.view.DisplayController">
    <children>
       <Label layoutX="281.0" layoutY="30.0" text="Heap 1" />
       <Label layoutX="281.0" layoutY="113.0" text="Heap 2" />
       <Label layoutX="281.0" layoutY="207.0" text="Heap 3" />
-      <Label layoutX="296.0" layoutY="71.0" text="3" />
-      <Label layoutX="296.0" layoutY="156.0" text="5" />
-      <Label layoutX="296.0" layoutY="240.0" text="7" />
+      <Label fx:id="firstHeapLbl" layoutX="296.0" layoutY="47.0" text="3" />
+      <Label fx:id="secondHeapLbl" layoutX="296.0" layoutY="130.0" text="5" />
+      <Label fx:id="thirdHeapLbl" layoutX="297.0" layoutY="224.0" text="7" />
+      <Button layoutX="274.0" layoutY="88.0" mnemonicParsing="false" onAction="#removeFromHeap1" text="Button" />
+      <Button layoutX="274.0" layoutY="175.0" mnemonicParsing="false" onAction="#removeFromHeap2" text="Button" />
+      <Button layoutX="275.0" layoutY="263.0" mnemonicParsing="false" onAction="#removeFromHeap3" text="Button" />
    </children>
 </AnchorPane>
