--- a/src/application/view/Display.fxml
+++ b/src/application/view/Display.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.view.DisplayController">
@@ -12,8 +13,9 @@
       <Label fx:id="firstHeapLbl" layoutX="296.0" layoutY="47.0" text="3" />
       <Label fx:id="secondHeapLbl" layoutX="296.0" layoutY="130.0" text="5" />
       <Label fx:id="thirdHeapLbl" layoutX="297.0" layoutY="224.0" text="7" />
-      <Button layoutX="274.0" layoutY="88.0" mnemonicParsing="false" onAction="#removeFromHeap1" text="Button" />
-      <Button layoutX="274.0" layoutY="175.0" mnemonicParsing="false" onAction="#removeFromHeap2" text="Button" />
-      <Button layoutX="275.0" layoutY="263.0" mnemonicParsing="false" onAction="#removeFromHeap3" text="Button" />
+      <Button layoutX="275.0" layoutY="306.0" mnemonicParsing="false" onAction="#removeFromHeap3" text="Submit" />
+      <TextField fx:id="firstHeapInput" layoutX="273.0" layoutY="64.0" prefHeight="25.0" prefWidth="54.0" text="0" />
+      <TextField fx:id="secondHeapInput" layoutX="273.0" layoutY="154.0" prefHeight="25.0" prefWidth="54.0" text="0" />
+      <TextField fx:id="thirdHeapInput" layoutX="273.0" layoutY="241.0" prefHeight="25.0" prefWidth="54.0" text="0" />
    </children>
 </AnchorPane>
